fixed refreshing a member and documented it
